fixed the text-align justify on the blockquote tag

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ blockquote {
   max-width: 32em;
   font-style: italic;
   font-size: 20px;
-  text-align: justify;
+  /* text-align: justify; */
 }
 
 blockquote p::before {
@@ -74,9 +74,6 @@ blockquote p::before {
 }
 blockquote p::after {
   content: "\”";
-}
-blockquote p {
-  display: inline-block;
 }
 footer h3 {
   text-align: center;
